// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rollup Pill should not render when roll up count is 0 1`] = `
<InjectIntl(RollUpPill)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isSingleLine={true}
  rollupCount={0}
>
  <RollUpPill
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={true}
    rollupCount={0}
  />
</InjectIntl(RollUpPill)>
`;

exports[`Rollup Pill should render with rollup count 4 1`] = `
<InjectIntl(RollUpPill)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isSingleLine={true}
  rollupCount={4}
>
  <RollUpPill
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={true}
    rollupCount={4}
  >
    <div
      className="pill-list-item"
      role="listitem"
    >
      <button
        aria-describedby="rollup-pill-hint"
        className="rollup-pill is-selectable"
        data-terra-rollup-pill={true}
        data-terra-rollup-pill-show-focus-styles={true}
        id="rollup-pill"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="rollup-pill-label"
        >
          Terra.pills.label.rollupPill
        </span>
      </button>
      <VisuallyHiddenText
        aria-hidden="true"
        id="rollup-pill-hint"
        text="Terra.pills.hint.rollupPill"
      >
        <span
          aria-hidden="true"
          className="visually-hidden-text"
          id="rollup-pill-hint"
        >
          Terra.pills.hint.rollupPill
        </span>
      </VisuallyHiddenText>
    </div>
  </RollUpPill>
</InjectIntl(RollUpPill)>
`;
